<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.warriorminds.firebase.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/botonNoticias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suscribirse_a_noticias" />

            <Button
                android:id="@+id/botonDeportes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suscribirse_a_deportes" />

            <Button
                android:id="@+id/botonEntretenimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suscribirse_a_entretenimiento" />

            <Button
                android:id="@+id/botonCancelarNoticias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar_suscripci_n_a_noticias" />

            <Button
                android:id="@+id/botonCancelarDeportes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar_suscripci_n_a_deportes" />

            <Button
                android:id="@+id/botonCancelarEntretenimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar_suscripci_n_a_entretenimiento" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
